--- a/AndroidLibros/app/src/main/AndroidManifest.xml
+++ b/AndroidLibros/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".fila" />
+        <activity android:name=".ActionBarAdapter" />
         <activity android:name=".VistaLibro"></activity>
     </application>
 
